Http-client-branch: (cleanup)